--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         alt="Logo SMK Negeri 2 Gerung"
         class="logo"
       />
-      <h1>SMK NEGERI 2 GERUNG</h1>
-      <div class="subtitle">Pengumuman Kelulusan</div>
+      <h1>Pengumuman Kelulusan</h1>
+      <div class="subtitle">SMK NEGERI 2 GERUNG</div>
       <div class="tahun-pelajaran">Tahun Pelajaran 2024/2025</div>
 
       <form id="searchForm">
@@ -30,7 +30,7 @@
         <label for="tglLahir">Tanggal Lahir:</label>
         <input type="date" id="tglLahir" name="tglLahir" required />
 
-        <button type="submit">Cari</button>
+        <button type="submit">CEK HASIL</button>
       </form>
 
       <div id="loading">Loading...</div>
